# cosmos

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  prek.toml  pyproject.toml
core/: utils.py
example/configs/: template.yml
src/cosmos/configs/: template.yml
src/cosmos/core/: config.py
src/cosmos/destination/: base.py  models.py
src/cosmos/destination/handler/: local.py
src/cosmos/engines/: models.py
src/cosmos/gx/: models.py
src/cosmos/sources/: base.py  models.py
src/cosmos/sources/reader/: pandas_reader.py
src/cosmos/utils/loader/: yaml_loader.py
